[package]
name = "estr"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "BSD-2-Clause-Patent"
description = "A no_std and const capable fork of Ustr"
repository = "https://github.com/NthTensor/estr"

[dependencies]
crossfig = "0.1.3"
libabort = "0.1.9"
lock_api = "0.4.14"

parking_lot = { version = "0.12.5", optional = true }
rapidhash = "4.1.1"
spin = { version = "0.10.0", optional = true }

[features]
default = ["std"]
std = ["dep:parking_lot"]
spin = ["dep:spin"]
